welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: Unmatched closing brace '}' ignored here
					{return false}}}}
                                                      ^noTriples:4: error: ')' expected but '}' found.
					{return false}}}}
                                                       ^noTriples:8: error: Unmatched closing brace '}' ignored here
}
^noTriples:10: error: eof expected but '}' found.
 }
 ^